22th Alpha Release

NEWS:


NEW: [features/improvements]
+Comment/Uncomment are now combined into a single toggle action
 (modified patch from Giuseppe "Cowo" Corbelli).
+When mixed eol characters are detected a dialog warning of it is now shown,
 that offers to convert them instead of toggling on eol visibility as it
 previously did.
+Add option to enable/disable checking of eol characters.

BUG FIXES:
+Fix find options not properly being syncronized between dialog and find bar.
+Fix event handlers not properly getting connected when going from 2 -> 1 window.
+Fix eol mode settings in preferences.
+Fix search bar text not being colored properly on msw/gtk.
+Fix window not being raised from taskbar when opening file with 'Open with...'

#-----------------------------------------------------------------------------#

VERSION 0.4.28
DATE 12/20/2008
21th Alpha Release

NEWS:
This is yet another quick turnaround bug fix release. The previous build had
an issue with some missing files. This release also adds the new pane navigator
feature to make it easy to move from panel to panel with the keyboard.

NEW: [features/improvements]
+Keyboard navigation of MainWindow panes (OSX: Alt+Tab, Others:Alt+1).
 (modified patch from Giuseppe "Cowo" Corbelli).

BUG FIXES:
+Fix search string not getting set from buffer selection in search bar.
+Fix error when clicking Regular Expression in Search Bar
+Add some missing sql keywords.

#-----------------------------------------------------------------------------#

VERSION 0.4.25
DATE 12/17/2008
20th Alpha Release

NEWS:
This is another quick turnaround release to fix some fairly critical bugs in the
last release.

NEW: [features/improvements]
+Some autocompletion behavior improvements
+Some minor ui changes to the command bar

BUG FIXES:
+Fix find in files where if the filter was empty no files were searched.
+Fix error in Find All where incorrect search flag parameters were set.
+Fix Find/Replace not working.